fix(bullet-list-react): fix wrapping
affects: @fremtind/jkl-bullet-list-react, @fremtind/jkl-bullet-list

--- a/packages/bullet-list-react/example/index.scss
+++ b/packages/bullet-list-react/example/index.scss
@@ -2,3 +2,7 @@ html,
 body {
     height: 100%;
 }
+
+.jkl-list {
+    margin-top: 2rem;
+}
